<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingTop="@dimen/recycler_row_padding"
    android:paddingBottom="@dimen/recycler_row_padding"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:textSize="@dimen/recycler_row_header_text_size"
        android:text="@string/recycler_row_header_label_ssid"
        android:id="@+id/ssid_text_view"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/recycler_row_header_label_bssid"
        android:textSize="@dimen/recycler_row_header_text_size"
        android:id="@+id/bssid_text_view"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/recycler_row_header_label_dbm"
        android:textSize="@dimen/recycler_row_header_text_size"
        android:id="@+id/dbm_text_view"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/recycler_row_header_label_mc"
        android:textSize="@dimen/recycler_row_header_text_size"
        android:id="@+id/mc_text_view"/>

<!--    <View-->
<!--        android:id="@+id/divider1"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="@dimen/activity_access_point_ranging_request_divider_height"-->
<!--        android:layout_marginEnd="@dimen/activity_access_point_ranging_request_margin_end"-->
<!--        android:layout_marginStart="@dimen/activity_access_point_ranging_request_margin_start"-->
<!--        android:layout_marginTop="@dimen/activity_access_point_ranging_request_margin_top_divider"-->
<!--        android:background="?android:attr/listDivider"-->
<!--        android:visibility="visible"-->
<!--        />-->

</LinearLayout>
